@@ -63,6 +63,20 @@ static PyObject *referencer_document_parse_bibtex (PyObject *self, PyObject *arg
 	return Py_BuildValue ("i", 0);
 }
 
+static PyObject *referencer_document_print_bibtex (PyObject *self, PyObject *args)
+{
+	/* Parse arguments */
+	Document *doc = ((referencer_document*)self)->doc_;
+	bool useBraces = (PyTuple_GetItem (args, 0) == Py_True);
+	bool utf8 = (PyTuple_GetItem (args, 1) == Py_True);
+
+	/* Get bibtex string */
+	Glib::ustring bibtex = doc->printBibtex (useBraces, utf8);
+
+	/* Convert for output */
+	/* FIXME: will this work with utf8 true? */
+	return PyString_FromString (bibtex.c_str());
+}
 
 static void referencer_document_dealloc (PyObject *self)
 {
@@ -95,6 +109,7 @@ static PyMethodDef referencer_document_methods[] = {
 	{"get_filename", referencer_document_get_filename, METH_VARARGS, "Get the filename"},
 	{"set_filename", referencer_document_set_filename, METH_VARARGS, "Set the filename"},
 	{"parse_bibtex", referencer_document_parse_bibtex, METH_VARARGS, "Set fields from bibtex string"},
+	{"print_bibtex", referencer_document_print_bibtex, METH_VARARGS, "Print bibtex representation of document"},
 	{NULL, NULL, 0, NULL}
 };
 
