@@ -333,6 +333,35 @@ y is not required.
 \begin_layout Description
 
 \family typewriter
+referencer.bibtex_to_fields(
+\emph on
+bibtex
+\emph default
+)
+\family default
+\series bold
+ 
+\series default
+Bibtex parser.
+ Converts a bibtex snippet into a dictionary having keys/value pairs compatible
+ with the 
+\family typewriter
+set_field
+\family default
+ and 
+\family typewriter
+get_field 
+\family default
+methods of the 
+\family typewriter
+document
+\family default
+ class.
+\end_layout
+
+\begin_layout Description
+
+\family typewriter
 referencer._(
 \emph on
 text)
@@ -515,6 +544,15 @@ value
 value
 \emph default
  as plain-text BibTex and set the document's fields accordingly.
+\end_layout
+
+\begin_layout Description
+
+\family typewriter
+print_bibtex()
+\family default
+ Return a string containing the bibtex representation of the document's
+ metadata.
 \end_layout
 
 \begin_layout Subsection
